# goLite

./: .gitignore  README.md  Scanner.x  build.sh  diff_generator.sh  golite.cabal  run.sh  stack.yaml  stack.yaml.bak  test.sh
app/: Main.hs
doc/feedback/milestone1/: feedback_group1.txt  parserFails.txt
doc/feedback/milestone2/: feedback_1.txt
doc/reports/: milestone1.md  milestone2.md  milestone3.md
programs/benchmark/: knapsack.go  subset_sum.go
programs/benchmarks/: dijkstra.go  list.go  subset_sum.go
programs/code/: append.go  equality.go  identifiers.go  type_casting.go
programs/generator/: append.go  cast_shadow_int.go  compare_struct.go  equality.go  if_init_shadow.go  slice.go  types.go
programs/invalid/: arrayaccess1.go  arrayaccess2.go  arraydclr2.go  blankid3.go  continue2.go
programs/invalid/parser/: arrayassign1.go  arrayassign2.go  arraydclr1.go  dec1.go  for2.go  funcdclr2.go  funcdclr3.go  if1.go  if2.go  if4.go  if5.go  inc1.go  inc2.go  package1.go  package3.go  return1.go  structaccess1.go  structaccess2.go  svd1.go  switch1.go  typedclr1.go  typedclr2.go  typestruct1.go  typestruct3.go  vardclr4.go
programs/invalid/typechecker/: alias1.go  alias2.go  append1.go  append2.go  assign2.go  binary_comparable_slice.go  block1.go  cast1.go  cast3.go  cast4.go  cast5.go  expr1.go  expr10.go  expr11.go  expr12.go  expr13.go  expr14.go  expr15.go  expr16.go  expr17.go  expr18.go  expr19.go  expr2.go  expr20.go  expr21.go  expr22.go  expr23.go  expr24.go  expr25.go  expr26.go  expr27.go  expr28.go  expr29.go  expr3.go  expr4.go  expr5.go  expr6.go  expr7.go  expr8.go  expr9.go  (+50 more)
programs/invalid/types/: append3.go  assign1.go  assign3.go  cast2.go  funcdec2.go  if1.go  print1.go  vardclr1.go
programs/invalid/weeder/: blankid1.go  blankid2.go  break1.go  break2.go  continue1.go  for3.go  for4.go  funcdclr4.go  funcdclr5.go  funcdclr8.go  svd2.go  switch1.go  term1.go  term2.go  term3.go  term4.go  term5.go  term6.go  term7.go  term8.go  term9.go  vardclr3.go
programs/syntax/invalid/: arraydclr3.go  arraydclr4.go  dec2.go  empty2.go  for1.go  funcdclr1.go  funcdclr2.go  funcdclr3.go  funcdclr4.go  funcdclr5.go  if3.go  package2.go  package4.go  switch2.go  typestruct2.go  vardclr1.go  vardclr2.go
programs/syntax/valid/: arraydclr2.go  block_comment.go  expr4.go  expr5.go  expr6.go  expr7.go  expr8.go  for1.go  for10.go  for2.go  for8.go  funcdclr1.go  funcdclr2.go  funcdclr3.go  funcdclr4.go  funcdclr5.go  funcdclr6.go  funcdclr7.go  funcdclr8.go  if1.go  if3.go  if4.go  if8.go  if9.go  package1.go  print1.go  println1.go  svd3.go  svd4.go  svd5.go  switch1.go  switch2.go  typedclr2.go  typestruct1.go  typestruct3.go  typestruct4.go  vardclr2.go  vardclr4.go
programs/tmp/: funcdclr7.go  svd6.go  vardclr6.go  vardclr7.go
programs/tmp/funcdclr/: funcdclr1.go  funcdclr2.go  funcdclr3.go  funcdclr6.go  funcdclr7.go  funcdclr9.go
programs/valid/: bubblesort.go  collatz.go  fast_exp.go  fibonacci.go  knapsack.go  randomGenerator.go
programs/valid/codegen/: array_slice.go  bit_ops.go  bounds.go  equality.go  errors.txt  for_loop.go  if_init_shadow.go  init_and_print.go  int_div.go  multiple_assigns.go  operations.go  pass_by_value.go  scoping.go  type_casting.go
programs/valid/syntax/: arrayaccess1.go  arrayaccess2.go  arrayassign1.go  arraydclr1.go  arraydclr2.go  arraydclr3.go  arraydclr4.go  assign1.go  bubblesort.go  dec1.go  expr1.go  expr10.go  expr2.go  expr3.go  expr8.go  expr9.go  for12.go  for3.go  for4.go  for5.go  for6.go  for7.go  for9.go  funcdclr1.go  funcdclr2.go  funcdclr3.go  funcdclr4.go  funcdclr5.go  funcdclr6.go  funcdclr7.go  funcdclr8.go  if2.go  if5.go  if6.go  if7.go  inc1.go  print2.go  print3.go  println2.go  println3.go  (+35 more)
programs/valid/typechecker/block.go/: if_else.go  switch_expr.go  switch_stmt.go
programs/valid/typechecker/declarations/: func_dclr_array.go  func_dclr_bool.go  func_dclr_float64.go  func_dclr_int.go  func_dclr_params.go  func_dclr_rune.go  func_dclr_slice.go  func_dclr_string.go  func_dclr_struct.go  func_dclr_unexecutable.go  func_dclr_void.go  func_dclr_void_return.go  type_dclr_float64.go  type_dclr_rune.go  type_dclr_string.go  var_dclr_array.go  var_dclr_array_assign.go  var_dclr_bool.go  var_dclr_bool_assign.go  var_dclr_bool_implicit.go  var_dclr_float64.go  var_dclr_float64_assign.go  var_dclr_float64_implicit.go  var_dclr_int.go  var_dclr_int_assign.go  var_dclr_int_implicit.go  var_dclr_rune.go  var_dclr_rune_assign.go  var_dclr_rune_implicit.go  var_dclr_slice.go  var_dclr_slice_assign.go  var_dclr_string.go  var_dclr_string_assign.go  var_dclr_string_implicit.go
programs/valid/typechecker/expressions/: append.go  binary_bool.go  binary_comparable_alias.go  binary_comparable_array.go  binary_comparable_bool.go  (+49 more)
reports/: milestone1.md
src/: GoLite.hs  Language.hs  Operators.hs  Parser.y  Pretty.hs  Scanner.x  SymbolTable.hs  TokenClass.hs  TypeCheck.hs  TypeChecker.hs  Weeder.hs
src/CodeGen/: Array.hs  BuiltIns.hs  CodeGenerator.hs  Codeable.hs  Comparison.hs  Expressions.hs  Prefix.hs
src/CodeGen/Native/: Array.hs  Cast.hs  Comparison.hs
src/Language/: Common.hs  Language.hs  Operators.hs  TypedLanguage.hs
src/Parser/: Parser.y  Scanner.x  TokenClass.hs  Weeder.hs
src/Pretty/: CodeGenerator.hs  Common.hs  Language.hs  Operators.hs  Pretty.hs  TypedLanguage.hs  TypedPretty.hs  Util.hs
src/TypeChecker/: SymbolTable.hs  TypeChecker.hs  TypeCheckerError.hs  ValidateReturns.hs
test/: Spec.hs
test/Spec/: GoLite.hs  Parser.hs  Pretty.hs  Scanner.hs  TypeChecker.hs  TypedPretty.hs
(+53 files in other folders)
