name:                golite
version:             0.1.0.0
author:              Charlie Bloomfield <charlielbloomfield@gmail.com>
maintainer:          (none)
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scanner
                     , Parser
                     , Language
                     , Pretty
                     , TokenClass
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable golite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , golite
  default-language:    Haskell2010

test-suite golite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec.Scanner
                     , Spec.Parser
                     , Spec.Pretty
  build-depends:       base
                     , golite
                     , hspec
                     , hspec-core
                     , filepath >= 1.0
                     , directory >= 1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/golite
