name:                golite
version:             0.1.0.0
author:              Yi Qiao Wang, Thomas Jansen, Charlie Bloomfield
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GoLite
                     , Scanner
                     , Parser
                     , Language
                     , Pretty.Pretty
                     , Pretty.TypedPretty
                     , TokenClass
                     , Weeder
                     , TypeChecker
                     , SymbolTable
                     , Pretty.CodeGenerator
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable golite-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , argparser
                     , filepath >= 1.0
                     , golite
                     , pretty-show
                     , containers
  default-language:    Haskell2010

test-suite golite-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spec.Scanner
                     , Spec.Parser
                     , Spec.Pretty
                     , Spec.TypedPretty
                     , Spec.TypeChecker
  build-depends:       base
                     , golite
                     , hspec
                     , hspec-core
                     , filepath >= 1.0
                     , directory >= 1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/golite
